# LLMChatAssistant

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  debug_agent.py  main.py  pyproject.toml  pytest.ini  quick_test.py  run_comprehensive_test.py  start_client.sh
.claude/commands/: speckit.plan.md
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
clients/cli/: __init__.py  client_api.py  main.py  nplt_client.py  pyproject.toml  rdt_client.py  ui.py
clients/cli/config/: config.yaml.example
clients/cli/protocols/: nplt.py  rdt.py
clients/cli/tests/: base.py
clients/cli/tests/boundary/: README.md
clients/cli/tests/fixtures/: server.py
docs/: backend_api_summary.md  backspace-fix.md  chinese_input_fix.md  file-access-security.md  file-transfer-mechanisms.md  history-implementation-mechanism.md  hybrid-transport-architecture.md  message-flow-analysis.md  protocol-analysis.md  protocol-call-chain.md  streaming-output-implementation.md  streaming-speed-analysis.md  streaming-summary.md  true-streaming-implementation.md  ui-fixes-final.md  ui-improvements-summary.md  ui-improvements-v2-summary.md  uploaded_files_persistence.md  user_guide.md  课程大作业.md  需求规格说明书.md
openspec/: project.md
reports/: test_12features_20260101_221254.json  test_12features_20260101_222613.json
scripts/: run_infrastructure_test.py  verify_environment.py
server/: __init__.py  agent.py  http_server.py  main.py  nplt_server.py  rdt_server.py
server/llm/: base.py  zhipu.py  (+1 more)
test_files_upload/: config.yaml  data.json  readme.txt
tests/: conftest.py
(+200 files in other folders)
