[project]
name = "llmchatassistant"
version = "0.1.0"
description = "智能网络运维助手 - 基于 NPLT 协议的 AI 对话和 RDT 可靠文件传输系统"
requires-python = ">=3.11"
dependencies = [
    "zai-sdk>=0.1.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
